Demo-Sample/dslCreator/grammar/RealSocialableGrammarParser.js
// Generated from RealSocialableGrammar.g4 by ANTLR 4.5.3
// jshint ignore: start
var antlr4 = require('antlr4/index');
var RealSocialableGrammarVisitor = require('./RealSocialableGrammarVisitor').RealSocialableGrammarVisitor;

var grammarFileName = "RealSocialableGrammar.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'dslname ='", "';'", "','", "'='", "'{'", "'}'", 
                     "'return'", "'save'", "'%'", "'elseif'", "'if'", "'else'", 
                     "'('", "')'", "'.'", "'where'", "'any'", "'=='", "'!='", 
                     "'<='", "'>='", "'AND'", "'OR'", "'*'", "'/'", "'+'", 
                     "'-'", "'['", "']'", "'<'", "'>'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, "MUL", "DIV", 
                      "ADD", "SUB", "LSQUARE", "RSQUARE", "GT", "LT", "ID", 
                      "INT", "STRING", "FLOAT", "NEWLINE", "WS" ];

var ruleNames =  [ "prog", "inputs", "input", "block", "returnkeyword", 
                   "returnvalue", "stat", "save", "dslAssignment", "embeddeddsl", 
                   "dslName", "variableAssignments", "variableAssignment", 
                   "ifconditionexpression", "elseifexpression", "ifexpression", 
                   "elseexpression", "simplevariabledecl", "fieldassignment", 
                   "vardeclwithkeywords", "model", "variable", "clauses", 
                   "clause", "enumrableclauses", "enumrableclause", "field", 
                   "keyword", "operator", "logicaloperator", "expr" ];

function RealSocialableGrammarParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

RealSocialableGrammarParser.prototype = Object.create(antlr4.Parser.prototype);
RealSocialableGrammarParser.prototype.constructor = RealSocialableGrammarParser;

Object.defineProperty(RealSocialableGrammarParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

RealSocialableGrammarParser.EOF = antlr4.Token.EOF;
RealSocialableGrammarParser.T__0 = 1;
RealSocialableGrammarParser.T__1 = 2;
RealSocialableGrammarParser.T__2 = 3;
RealSocialableGrammarParser.T__3 = 4;
RealSocialableGrammarParser.T__4 = 5;
RealSocialableGrammarParser.T__5 = 6;
RealSocialableGrammarParser.T__6 = 7;
RealSocialableGrammarParser.T__7 = 8;
RealSocialableGrammarParser.T__8 = 9;
RealSocialableGrammarParser.T__9 = 10;
RealSocialableGrammarParser.T__10 = 11;
RealSocialableGrammarParser.T__11 = 12;
RealSocialableGrammarParser.T__12 = 13;
RealSocialableGrammarParser.T__13 = 14;
RealSocialableGrammarParser.T__14 = 15;
RealSocialableGrammarParser.T__15 = 16;
RealSocialableGrammarParser.T__16 = 17;
RealSocialableGrammarParser.T__17 = 18;
RealSocialableGrammarParser.T__18 = 19;
RealSocialableGrammarParser.T__19 = 20;
RealSocialableGrammarParser.T__20 = 21;
RealSocialableGrammarParser.T__21 = 22;
RealSocialableGrammarParser.T__22 = 23;
RealSocialableGrammarParser.MUL = 24;
RealSocialableGrammarParser.DIV = 25;
RealSocialableGrammarParser.ADD = 26;
RealSocialableGrammarParser.SUB = 27;
RealSocialableGrammarParser.LSQUARE = 28;
RealSocialableGrammarParser.RSQUARE = 29;
RealSocialableGrammarParser.GT = 30;
RealSocialableGrammarParser.LT = 31;
RealSocialableGrammarParser.ID = 32;
RealSocialableGrammarParser.INT = 33;
RealSocialableGrammarParser.STRING = 34;
RealSocialableGrammarParser.FLOAT = 35;
RealSocialableGrammarParser.NEWLINE = 36;
RealSocialableGrammarParser.WS = 37;

RealSocialableGrammarParser.RULE_prog = 0;
RealSocialableGrammarParser.RULE_inputs = 1;
RealSocialableGrammarParser.RULE_input = 2;
RealSocialableGrammarParser.RULE_block = 3;
RealSocialableGrammarParser.RULE_returnkeyword = 4;
RealSocialableGrammarParser.RULE_returnvalue = 5;
RealSocialableGrammarParser.RULE_stat = 6;
RealSocialableGrammarParser.RULE_save = 7;
RealSocialableGrammarParser.RULE_dslAssignment = 8;
RealSocialableGrammarParser.RULE_embeddeddsl = 9;
RealSocialableGrammarParser.RULE_dslName = 10;
RealSocialableGrammarParser.RULE_variableAssignments = 11;
RealSocialableGrammarParser.RULE_variableAssignment = 12;
RealSocialableGrammarParser.RULE_ifconditionexpression = 13;
RealSocialableGrammarParser.RULE_elseifexpression = 14;
RealSocialableGrammarParser.RULE_ifexpression = 15;
RealSocialableGrammarParser.RULE_elseexpression = 16;
RealSocialableGrammarParser.RULE_simplevariabledecl = 17;
RealSocialableGrammarParser.RULE_fieldassignment = 18;
RealSocialableGrammarParser.RULE_vardeclwithkeywords = 19;
RealSocialableGrammarParser.RULE_model = 20;
RealSocialableGrammarParser.RULE_variable = 21;
RealSocialableGrammarParser.RULE_clauses = 22;
RealSocialableGrammarParser.RULE_clause = 23;
RealSocialableGrammarParser.RULE_enumrableclauses = 24;
RealSocialableGrammarParser.RULE_enumrableclause = 25;
RealSocialableGrammarParser.RULE_field = 26;
RealSocialableGrammarParser.RULE_keyword = 27;
RealSocialableGrammarParser.RULE_operator = 28;
RealSocialableGrammarParser.RULE_logicaloperator = 29;
RealSocialableGrammarParser.RULE_expr = 30;

function ProgContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RealSocialableGrammarParser.RULE_prog;
    return this;
}

ProgContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgContext.prototype.constructor = ProgContext;

ProgContext.prototype.ID = function() {
    return this.getToken(RealSocialableGrammarParser.ID, 0);
};

ProgContext.prototype.inputs = function() {
    return this.getTypedRuleContext(InputsContext,0);
};

ProgContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

ProgContext.prototype.NEWLINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(RealSocialableGrammarParser.NEWLINE);
    } else {
        return this.getToken(RealSocialableGrammarParser.NEWLINE, i);
    }
};


ProgContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RealSocialableGrammarVisitor ) {
        return visitor.visitProg(this);
    } else {
        return visitor.visitChildren(this);
    }
};




RealSocialableGrammarParser.ProgContext = ProgContext;

RealSocialableGrammarParser.prototype.prog = function() {

    var localctx = new ProgContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, RealSocialableGrammarParser.RULE_prog);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 62;
        this.match(RealSocialableGrammarParser.T__0);
        this.state = 63;
        this.match(RealSocialableGrammarParser.ID);
        this.state = 64;
        this.match(RealSocialableGrammarParser.T__1);
        this.state = 68;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===RealSocialableGrammarParser.NEWLINE) {
            this.state = 65;
            this.match(RealSocialableGrammarParser.NEWLINE);
            this.state = 70;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 71;
        this.inputs();
        this.state = 72;
        this.match(RealSocialableGrammarParser.T__1);
        this.state = 76;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===RealSocialableGrammarParser.NEWLINE) {
            this.state = 73;
            this.match(RealSocialableGrammarParser.NEWLINE);
            this.state = 78;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 79;
        this.block();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function InputsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RealSocialableGrammarParser.RULE_inputs;
    return this;
}

InputsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InputsContext.prototype.constructor = InputsContext;

InputsContext.prototype.input = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(InputContext);
    } else {
        return this.getTypedRuleContext(InputContext,i);
    }
};

InputsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RealSocialableGrammarVisitor ) {
        return visitor.visitInputs(this);
    } else {
        return visitor.visitChildren(this);
    }
};




RealSocialableGrammarParser.InputsContext = InputsContext;

RealSocialableGrammarParser.prototype.inputs = function() {

    var localctx = new InputsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, RealSocialableGrammarParser.RULE_inputs);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 81;
        this.input();
        this.state = 86;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===RealSocialableGrammarParser.T__2) {
            this.state = 82;
            this.match(RealSocialableGrammarParser.T__2);
            this.state = 83;
            this.input();
            this.state = 88;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function InputContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RealSocialableGrammarParser.RULE_input;
    return this;
}

InputContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InputContext.prototype.constructor = InputContext;

InputContext.prototype.variable = function() {
    return this.getTypedRuleContext(VariableContext,0);
};

InputContext.prototype.model = function() {
    return this.getTypedRuleContext(ModelContext,0);
};

InputContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RealSocialableGrammarVisitor ) {
        return visitor.visitInput(this);
    } else {
        return visitor.visitChildren(this);
    }
};




RealSocialableGrammarParser.InputContext = InputContext;

RealSocialableGrammarParser.prototype.input = function() {

    var localctx = new InputContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, RealSocialableGrammarParser.RULE_input);
    try {
        this.state = 99;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 89;
            this.variable();
            this.state = 90;
            this.match(RealSocialableGrammarParser.T__3);
            this.state = 91;
            this.model();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 93;
            this.variable();
            this.state = 94;
            this.match(RealSocialableGrammarParser.T__3);
            this.state = 95;
            this.match(RealSocialableGrammarParser.LSQUARE);
            this.state = 96;
            this.model();
            this.state = 97;
            this.match(RealSocialableGrammarParser.RSQUARE);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RealSocialableGrammarParser.RULE_block;
    return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.stat = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatContext);
    } else {
        return this.getTypedRuleContext(StatContext,i);
    }
};

BlockContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RealSocialableGrammarVisitor ) {
        return visitor.visitBlock(this);
    } else {
        return visitor.visitChildren(this);
    }
};




RealSocialableGrammarParser.BlockContext = BlockContext;

RealSocialableGrammarParser.prototype.block = function() {

    var localctx = new BlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, RealSocialableGrammarParser.RULE_block);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 101;
        this.match(RealSocialableGrammarParser.T__4);
        this.state = 103; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 102;
            this.stat();
            this.state = 105; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(((((_la - 7)) & ~0x1f) == 0 && ((1 << (_la - 7)) & ((1 << (RealSocialableGrammarParser.T__6 - 7)) | (1 << (RealSocialableGrammarParser.T__7 - 7)) | (1 << (RealSocialableGrammarParser.T__10 - 7)) | (1 << (RealSocialableGrammarParser.ID - 7)) | (1 << (RealSocialableGrammarParser.NEWLINE - 7)))) !== 0));
        this.state = 107;
        this.match(RealSocialableGrammarParser.T__5);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ReturnkeywordContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RealSocialableGrammarParser.RULE_returnkeyword;
    return this;
}

ReturnkeywordContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ReturnkeywordContext.prototype.constructor = ReturnkeywordContext;


ReturnkeywordContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RealSocialableGrammarVisitor ) {
        return visitor.visitReturnkeyword(this);
    } else {
        return visitor.visitChildren(this);
    }
};




RealSocialableGrammarParser.ReturnkeywordContext = ReturnkeywordContext;

RealSocialableGrammarParser.prototype.returnkeyword = function() {

    var localctx = new ReturnkeywordContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, RealSocialableGrammarParser.RULE_returnkeyword);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 109;
        this.match(RealSocialableGrammarParser.T__6);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ReturnvalueContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RealSocialableGrammarParser.RULE_returnvalue;
    return this;
}

ReturnvalueContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ReturnvalueContext.prototype.constructor = ReturnvalueContext;

ReturnvalueContext.prototype.returnkeyword = function() {
    return this.getTypedRuleContext(ReturnkeywordContext,0);
};

ReturnvalueContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

ReturnvalueContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RealSocialableGrammarVisitor ) {
        return visitor.visitReturnvalue(this);
    } else {
        return visitor.visitChildren(this);
    }
};




RealSocialableGrammarParser.ReturnvalueContext = ReturnvalueContext;

RealSocialableGrammarParser.prototype.returnvalue = function() {

    var localctx = new ReturnvalueContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, RealSocialableGrammarParser.RULE_returnvalue);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 111;
        this.returnkeyword();
        this.state = 112;
        this.field();
        this.state = 113;
        this.match(RealSocialableGrammarParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RealSocialableGrammarParser.RULE_stat;
    return this;
}

StatContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatContext.prototype.constructor = StatContext;

StatContext.prototype.simplevariabledecl = function() {
    return this.getTypedRuleContext(SimplevariabledeclContext,0);
};

StatContext.prototype.dslAssignment = function() {
    return this.getTypedRuleContext(DslAssignmentContext,0);
};

StatContext.prototype.fieldassignment = function() {
    return this.getTypedRuleContext(FieldassignmentContext,0);
};

StatContext.prototype.vardeclwithkeywords = function() {
    return this.getTypedRuleContext(VardeclwithkeywordsContext,0);
};

StatContext.prototype.returnvalue = function() {
    return this.getTypedRuleContext(ReturnvalueContext,0);
};

StatContext.prototype.save = function() {
    return this.getTypedRuleContext(SaveContext,0);
};

StatContext.prototype.ifconditionexpression = function() {
    return this.getTypedRuleContext(IfconditionexpressionContext,0);
};

StatContext.prototype.NEWLINE = function() {
    return this.getToken(RealSocialableGrammarParser.NEWLINE, 0);
};

StatContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RealSocialableGrammarVisitor ) {
        return visitor.visitStat(this);
    } else {
        return visitor.visitChildren(this);
    }
};




RealSocialableGrammarParser.StatContext = StatContext;

RealSocialableGrammarParser.prototype.stat = function() {

    var localctx = new StatContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, RealSocialableGrammarParser.RULE_stat);
    try {
        this.state = 123;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 115;
            this.simplevariabledecl();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 116;
            this.dslAssignment();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 117;
            this.fieldassignment();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 118;
            this.vardeclwithkeywords();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 119;
            this.returnvalue();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 120;
            this.save();
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 121;
            this.ifconditionexpression();
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 122;
            this.match(RealSocialableGrammarParser.NEWLINE);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SaveContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RealSocialableGrammarParser.RULE_save;
    return this;
}

SaveContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SaveContext.prototype.constructor = SaveContext;

SaveContext.prototype.variable = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VariableContext);
    } else {
        return this.getTypedRuleContext(VariableContext,i);
    }
};

SaveContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RealSocialableGrammarVisitor ) {
        return visitor.visitSave(this);
    } else {
        return visitor.visitChildren(this);
    }
};




RealSocialableGrammarParser.SaveContext = SaveContext;

RealSocialableGrammarParser.prototype.save = function() {

    var localctx = new SaveContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, RealSocialableGrammarParser.RULE_save);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 125;
        this.match(RealSocialableGrammarParser.T__7);
        this.state = 126;
        this.variable();
        this.state = 131;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===RealSocialableGrammarParser.T__2) {
            this.state = 127;
            this.match(RealSocialableGrammarParser.T__2);
            this.state = 128;
            this.variable();
            this.state = 133;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 134;
        this.match(RealSocialableGrammarParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DslAssignmentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RealSocialableGrammarParser.RULE_dslAssignment;
    return this;
}

DslAssignmentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DslAssignmentContext.prototype.constructor = DslAssignmentContext;

DslAssignmentContext.prototype.variable = function() {
    return this.getTypedRuleContext(VariableContext,0);
};

DslAssignmentContext.prototype.embeddeddsl = function() {
    return this.getTypedRuleContext(EmbeddeddslContext,0);
};

DslAssignmentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RealSocialableGrammarVisitor ) {
        return visitor.visitDslAssignment(this);
    } else {
        return visitor.visitChildren(this);
    }
};




RealSocialableGrammarParser.DslAssignmentContext = DslAssignmentContext;

RealSocialableGrammarParser.prototype.dslAssignment = function() {

    var localctx = new DslAssignmentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, RealSocialableGrammarParser.RULE_dslAssignment);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 136;
        this.variable();

        this.state = 137;
        this.match(RealSocialableGrammarParser.T__3);
        this.state = 138;
        this.embeddeddsl();
        this.state = 140;
        this.match(RealSocialableGrammarParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function EmbeddeddslContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RealSocialableGrammarParser.RULE_embeddeddsl;
    return this;
}

EmbeddeddslContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EmbeddeddslContext.prototype.constructor = EmbeddeddslContext;

EmbeddeddslContext.prototype.dslName = function() {
    return this.getTypedRuleContext(DslNameContext,0);
};

EmbeddeddslContext.prototype.variableAssignments = function() {
    return this.getTypedRuleContext(VariableAssignmentsContext,0);
};

EmbeddeddslContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RealSocialableGrammarVisitor ) {
        return visitor.visitEmbeddeddsl(this);
    } else {
        return visitor.visitChildren(this);
    }
};




RealSocialableGrammarParser.EmbeddeddslContext = EmbeddeddslContext;

RealSocialableGrammarParser.prototype.embeddeddsl = function() {

    var localctx = new EmbeddeddslContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, RealSocialableGrammarParser.RULE_embeddeddsl);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 142;
        this.match(RealSocialableGrammarParser.T__8);
        this.state = 143;
        this.dslName();
        this.state = 144;
        this.match(RealSocialableGrammarParser.T__8);
        this.state = 145;
        this.variableAssignments();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DslNameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RealSocialableGrammarParser.RULE_dslName;
    return this;
}

DslNameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DslNameContext.prototype.constructor = DslNameContext;

DslNameContext.prototype.ID = function() {
    return this.getToken(RealSocialableGrammarParser.ID, 0);
};

DslNameContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RealSocialableGrammarVisitor ) {
        return visitor.visitDslName(this);
    } else {
        return visitor.visitChildren(this);
    }
};




RealSocialableGrammarParser.DslNameContext = DslNameContext;

RealSocialableGrammarParser.prototype.dslName = function() {

    var localctx = new DslNameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, RealSocialableGrammarParser.RULE_dslName);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 147;
        this.match(RealSocialableGrammarParser.ID);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function VariableAssignmentsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RealSocialableGrammarParser.RULE_variableAssignments;
    return this;
}

VariableAssignmentsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VariableAssignmentsContext.prototype.constructor = VariableAssignmentsContext;

VariableAssignmentsContext.prototype.variableAssignment = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VariableAssignmentContext);
    } else {
        return this.getTypedRuleContext(VariableAssignmentContext,i);
    }
};

VariableAssignmentsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RealSocialableGrammarVisitor ) {
        return visitor.visitVariableAssignments(this);
    } else {
        return visitor.visitChildren(this);
    }
};




RealSocialableGrammarParser.VariableAssignmentsContext = VariableAssignmentsContext;

RealSocialableGrammarParser.prototype.variableAssignments = function() {
